--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,8 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Efficiently building ML workflows at scale for production pipelines"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: 
+venue: "Analyticon Conference, Amazon"
+location: "Remote"
 ---
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
