--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,10 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Generating explainations for deals recommendations using SHAP"
 collection: talks
-type: "Conference proceedings talk"
+type: "Talk"
 permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA"
+venue: "Amazon"
+location: "Bangalore"
 ---
 
 This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
