--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -2,6 +2,7 @@
 title: "Personalized BI dashboards for hands-off-the-wheel (HOTW) ML workflows"
 collection: talks
 type: "Tutorial"
+permalink: /talks/2014-02-01-talk-2
 venue: "HOTW Workshop, Amazon"
 location: "Bangalore"
 ---
