--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -16,13 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.9 ('base')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os"
@@ -47,20 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.9 ('base')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -89,107 +99,14 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>type</th>\n",
-       "      <th>url_slug</th>\n",
-       "      <th>venue</th>\n",
-       "      <th>date</th>\n",
-       "      <th>location</th>\n",
-       "      <th>talk_url</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
-       "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
-       "      <td>2012-03-01</td>\n",
-       "      <td>San Francisco, California</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tutorial 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Tutorial</td>\n",
-       "      <td>tutorial-1</td>\n",
-       "      <td>UC-Berkeley Institute for Testing Science</td>\n",
-       "      <td>2013-03-01</td>\n",
-       "      <td>Berkeley CA, USA</td>\n",
-       "      <td>http://exampleurl.com</td>\n",
-       "      <td>This is a description of your tutorial, note t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Talk 2 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
-       "      <td>talk-2</td>\n",
-       "      <td>London School of Testing</td>\n",
-       "      <td>2014-02-01</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>http://example2.com</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Conference Proceeding talk 3 on Relevant Topic...</td>\n",
-       "      <td>Conference proceedings talk</td>\n",
-       "      <td>talk-3</td>\n",
-       "      <td>Testing Institute of America 2014 Annual Confe...</td>\n",
-       "      <td>2014-03-01</td>\n",
-       "      <td>Los Angeles, CA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your conference proce...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
-       "1         Tutorial 1 on Relevant Topic in Your Field   \n",
-       "2             Talk 2 on Relevant Topic in Your Field   \n",
-       "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
-       "\n",
-       "                          type    url_slug  \\\n",
-       "0                         Talk      talk-1   \n",
-       "1                     Tutorial  tutorial-1   \n",
-       "2                         Talk      talk-2   \n",
-       "3  Conference proceedings talk      talk-3   \n",
-       "\n",
-       "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                           London School of Testing  2014-02-01   \n",
-       "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
-       "\n",
-       "                    location               talk_url  \\\n",
-       "0  San Francisco, California                    NaN   \n",
-       "1           Berkeley CA, USA  http://exampleurl.com   \n",
-       "2                 London, UK    http://example2.com   \n",
-       "3            Los Angeles, CA                    NaN   \n",
-       "\n",
-       "                                         description  \n",
-       "0  This is a description of your talk, which is a...  \n",
-       "1  This is a description of your tutorial, note t...  \n",
-       "2  This is a description of your talk, which is a...  \n",
-       "3  This is a description of your conference proce...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.9 ('base')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
+     ]
     }
    ],
    "source": [
@@ -358,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +289,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9d89afe8ca345ff2663a9f375a2a9acd89bfcf6f22f6e613c2ec2a7fe2a69f9f"
+   }
   }
  },
  "nbformat": 4,
