--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -20,12 +20,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: getorg in /home/vm/anaconda3/lib/python3.5/site-packages\n",
-      "Requirement already up-to-date: geopy in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: retrying in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: pygithub in /home/vm/anaconda3/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: six>=1.7.0 in /home/vm/.local/lib/python3.5/site-packages (from retrying->getorg)\n",
-      "IPywidgets and ipyleaflet support enabled.\n"
+      "Collecting getorg\n",
+      "  Downloading getorg-0.3.1-py2.py3-none-any.whl (39 kB)\n",
+      "Collecting pygithub\n",
+      "  Downloading PyGithub-1.59.0-py3-none-any.whl (342 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m342.1/342.1 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting retrying\n",
+      "  Downloading retrying-1.3.4-py3-none-any.whl (11 kB)\n",
+      "Collecting geopy\n",
+      "  Downloading geopy-2.3.0-py3-none-any.whl (119 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m119.8/119.8 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting geographiclib<3,>=1.52\n",
+      "  Downloading geographiclib-2.0-py3-none-any.whl (40 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.3/40.3 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.14.0 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from pygithub->getorg) (2.28.1)\n",
+      "Collecting deprecated\n",
+      "  Downloading Deprecated-1.2.14-py2.py3-none-any.whl (9.6 kB)\n",
+      "Collecting pynacl>=1.4.0\n",
+      "  Downloading PyNaCl-1.5.0-cp36-abi3-macosx_10_10_universal2.whl (349 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m349.9/349.9 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pyjwt[crypto]>=2.4.0\n",
+      "  Downloading PyJWT-2.7.0-py3-none-any.whl (22 kB)\n",
+      "Requirement already satisfied: six>=1.7.0 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from retrying->getorg) (1.16.0)\n",
+      "Collecting cryptography>=3.4.0\n",
+      "  Downloading cryptography-41.0.2-cp37-abi3-macosx_10_12_universal2.whl (5.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.3/5.3 MB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0mm\n",
+      "\u001b[?25hCollecting cffi>=1.4.1\n",
+      "  Using cached cffi-1.15.1-cp310-cp310-macosx_11_0_arm64.whl (174 kB)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from requests>=2.14.0->pygithub->getorg) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from requests>=2.14.0->pygithub->getorg) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from requests>=2.14.0->pygithub->getorg) (1.26.12)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/aakankshasanctis/ml_env/lib/python3.10/site-packages (from requests>=2.14.0->pygithub->getorg) (2.1.1)\n",
+      "Collecting wrapt<2,>=1.10\n",
+      "  Downloading wrapt-1.15.0-cp310-cp310-macosx_11_0_arm64.whl (36 kB)\n",
+      "Collecting pycparser\n",
+      "  Using cached pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+      "Installing collected packages: wrapt, retrying, pyjwt, pycparser, geographiclib, geopy, deprecated, cffi, pynacl, cryptography, pygithub, getorg\n",
+      "Successfully installed cffi-1.15.1 cryptography-41.0.2 deprecated-1.2.14 geographiclib-2.0 geopy-2.3.0 getorg-0.3.1 pycparser-2.21 pygithub-1.59.0 pyjwt-2.7.0 pynacl-1.5.0 retrying-1.3.4 wrapt-1.15.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Iywidgets and ipyleaflet support disabled. You must be in a Jupyter notebook to use this feature.\n",
+      "Error raised:\n",
+      "No module named 'ipywidgets'\n",
+      "Check that you have enabled ipyleaflet in Jupyter with:\n",
+      "    jupyter nbextension enable --py ipyleaflet\n"
      ]
     }
    ],
@@ -136,9 +175,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3.10.12 ('ml_env')",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -150,7 +189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.10.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3f89b0652f56f09cc30504115355d6ceb887b190aa91cea4ab20ac2fc0831dfb"
+   }
   }
  },
  "nbformat": 4,
