--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -2,7 +2,7 @@
 title: "Generating explainations for deals recommendations using SHAP"
 collection: talks
 type: "Talk"
-permalink: /talks/2014-03-01-talk-3
+# permalink: /talks/2014-03-01-talk-3
 venue: "Amazon"
 location: "Bangalore"
 ---
