--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -2,7 +2,7 @@
 title: "Efficiently building ML workflows at scale for production pipelines"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
+# permalink: /talks/2012-03-01-talk-1
 venue: "Analyticon Conference, Amazon"
 location: "Remote"
 ---
