--- a/_posts/2023-08-06-blog-post-1.md
+++ b/_posts/2023-08-06-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'An adversarial lens towards aligned LLMs'
+title: 'An adversarial lens towards aligned large language models'
 date: 2023-08-06
 permalink: /posts/2023/08/blog-post-1/
 tags:
@@ -14,12 +14,15 @@ tags:
   - Constitutional AI
 ---
 
+
+
+
 Since the public release of LLM-based chat assistants like ChatGPT, there has been a large emphasis on aligning AI language models to prevent the production of undesirable or harmful content. One approach is to use reinforcement learning from human preferences to optimize a pre-trained language model by learning a reward function based on human preferences [[1]](https://arxiv.org/abs/2203.02155). Constitutional AI [[2]](https://arxiv.org/abs/2212.08073) further removes the need for "human" preferences by training a reward model from AI feedback refined using safety instructions, thereby eliminating the dependence on human feedback. The recently released Llama-2 model [[3]](https://arxiv.org/abs/2307.09288) also uses safety and helpfulness criteria to learn an RLHF-like model that improves alignment in open-source LLMs.
 
 To test the alignment of these models, many attempts have been made to attack them. Jailbreaking research [[4]](Alexander Wei, Nika Haghtalab, and Jacob Steinhardt. Jailbroken: How does llm safety training
 fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentionally harmful queries. Currently, the loss function or reward model do not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
 
-![Universal_attacks](/assets/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
+![Universal_attacks](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
 
 Universal and Transferable Adversarial Attacks
 on Aligned Language Models [[5]](Universal and Transferable Adversarial Attacks
@@ -36,7 +39,7 @@ This paper aims to attack aligned language models (LMs) using a simple prompt st
 Let’s dive into the details of how such adversarial prompts are generated which are universal and transferable
 ## Producing affirmative responses
 When the user enters a query, the chat system transforms it behind the scenes into the following format.
-![format](/assets/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.20.06 PM.png)
+![format](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.20.06 PM.png)
 
 The adversarial suffix (shown in red) is optimized using a greedy coordinate gradient search. Importantly, the original user query is not altered, only the suffix. This allows developing a universal trigger that can mitigate potentially harmful responses across diverse user queries and models. By keeping the user query unchanged and optimizing the suffix alone, the approach can work for multiple input questions rather than being tied to specific phrasing.
 
@@ -54,7 +57,8 @@ However, this optimization is challenging due to the discrete nature of tokens. 
 ## Multi-modal, multi-prompt universal attack
 Finally, the authors needed to make the adversarial suffix universal so it could attack a range of LLMs. To achieve this, they ran the optimization process across multiple models. First, the suffix was tuned on a single user prompt. Then, new prompts were incrementally incorporated. By optimizing across diverse prompts, the authors produced a universal adversarial suffix that could transfer across models with similar vocabularies.
 
-![results](/assets/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 7.09.25 PM.png)
+![results](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 7.09.25 PM.png)
+
 What's next for alignment
 ------
 
