--- a/_posts/2023-08-06-blog-post-1.md
+++ b/_posts/2023-08-06-blog-post-1.md
@@ -22,7 +22,7 @@ Since the public release of LLM-based chat assistants like ChatGPT, there has be
 To test the alignment of these models, many attempts have been made to attack them. Jailbreaking research [[4]](Alexander Wei, Nika Haghtalab, and Jacob Steinhardt. Jailbroken: How does llm safety training
 fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentionally harmful queries. Currently, the loss function or reward model do not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
 
-![Universal_attacks](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
+![Universal_attacks](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
 
 Universal and Transferable Adversarial Attacks
 on Aligned Language Models [[5]](Universal and Transferable Adversarial Attacks
@@ -39,7 +39,7 @@ This paper aims to attack aligned language models (LMs) using a simple prompt st
 Let’s dive into the details of how such adversarial prompts are generated which are universal and transferable
 ## Producing affirmative responses
 When the user enters a query, the chat system transforms it behind the scenes into the following format.
-![format](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.20.06 PM.png)
+![format](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.20.06 PM.png)
 
 The adversarial suffix (shown in red) is optimized using a greedy coordinate gradient search. Importantly, the original user query is not altered, only the suffix. This allows developing a universal trigger that can mitigate potentially harmful responses across diverse user queries and models. By keeping the user query unchanged and optimizing the suffix alone, the approach can work for multiple input questions rather than being tied to specific phrasing.
 
@@ -57,7 +57,7 @@ However, this optimization is challenging due to the discrete nature of tokens. 
 ## Multi-modal, multi-prompt universal attack
 Finally, the authors needed to make the adversarial suffix universal so it could attack a range of LLMs. To achieve this, they ran the optimization process across multiple models. First, the suffix was tuned on a single user prompt. Then, new prompts were incrementally incorporated. By optimizing across diverse prompts, the authors produced a universal adversarial suffix that could transfer across models with similar vocabularies.
 
-![results](images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 7.09.25 PM.png)
+![results](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 7.09.25 PM.png)
 
 What's next for alignment
 ------
