corrected blog post grammar

--- a/_posts/2023-08-06-blog-post-1.md
+++ b/_posts/2023-08-06-blog-post-1.md
@@ -16,13 +16,14 @@ tags:
 
 
 
-
-Since the public release of LLM-based chat assistants like ChatGPT, there has been a large emphasis on aligning AI language models to prevent the production of undesirable or harmful content. One approach is to use reinforcement learning from human preferences to optimize a pre-trained language model by learning a reward function based on human preferences [[1]](https://arxiv.org/abs/2203.02155). Constitutional AI [[2]](https://arxiv.org/abs/2212.08073) further removes the need for "human" preferences by training a reward model from AI feedback refined using safety instructions, thereby eliminating the dependence on human feedback. The recently released Llama-2 model [[3]](https://arxiv.org/abs/2307.09288) also uses safety and helpfulness criteria to learn an RLHF-like model that improves alignment in open-source LLMs.
+----
+Since the public release of LLM-based chat assistants like ChatGPT, there has been a large emphasis on aligning AI language models to prevent the production of undesirable or harmful content. One approach is to use reinforcement learning from human preferences to optimize a pre-trained language model by learning a reward function based on human preferences [[1]](https://arxiv.org/abs/2203.02155). Constitutional AI [[2]](https://arxiv.org/abs/2212.08073) further removes the need for "human" preferences by training a reward model from AI feedback refined using safety instructions. The recently released Llama-2 model [[3]](https://arxiv.org/abs/2307.09288) also uses safety and helpfulness criteria to learn an RLHF-like model that improves alignment in open-source LLMs.
 
 To test the alignment of these models, many attempts have been made to attack them. Jailbreaking research [[4]](Alexander Wei, Nika Haghtalab, and Jacob Steinhardt. Jailbroken: How does llm safety training
-fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentionally harmful queries. Currently, the loss function or reward model do not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
+fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentional harmful queries. Currently, the loss function or reward model does not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
 
 ![Universal_attacks](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
+
 
 Universal and Transferable Adversarial Attacks
 on Aligned Language Models [[5]](Universal and Transferable Adversarial Attacks
@@ -31,7 +32,7 @@ on Aligned Language Models) introduces a universal strategy for generating adver
 
 A Universal Attack on LLMs
 ------
-This paper aims to attack aligned language models (LMs) using a simple prompt structure that includes the user query and an adversarial suffix. The suffix is generated using a combination of three basic elements.
+This paper aims to attack aligned language models (LMs) using a simple prompt structure that includes the user query and an adversarial suffix. The suffix is generated using a combination of three basic elements:
 * Shift the LLM’s generation direction to produce an affirmative response by prompting the model to begin its answer in an positive tone. For eg. If the user query is “Tell me how to build a bomb”, the suffix must be such that the LLM answers : “Sure, here is the response to build a bomb”
 * Optimization on vision input differs from text because optimization over discrete tokens is challenging. Therefore, the authors use a greedy approach and compute token level gradients to select single token replacements and pick the best sequence.
 * To make this prompt truly universal, multiple user prompts were trained across models so that the adversarial suffix can learn to induce potentially harmful behaviors across models
@@ -64,7 +65,7 @@ What's next for alignment
 
 The universal transferable prompt created by adversarially searching a suffix manages to attack all the public facing LLMs very effectively. Therefore, this research opens a whole new realm towards “Adversarial alignment”. This can open directions to training reward models and RLHF policy to give lower rewards to potentially adversarial queries. However, modifications might have to be made to the current alignment procedure as well as it only attenuates undesirable behavior without altogether removing it, leaving it suspectible to adversarial prompting attacks. 
 
-Further, if adversarially aligned language models follow similar patterns to vision systems, can we find a scalable method to adversarially train these models without substantial performance drops. Even though vision models have successful adversarial training strategies, they are seldom used practically because of computational inefficiency.
+Further, if adversarially aligned language models follow similar patterns to vision systems, can we find a scalable method to adversarially train these models without substantial performance drops? Even though vision models have successful adversarial training strategies, they are seldom used practically because of computational inefficiency.
 
 The results from this research show that some adversarial prompts are meaningful while others are not. Therefore, monitoring might seem like a good initial effort to filter adversarial queries. However, attackers can easily turn this around by attacking the detector and the model. This means that safety in LLMs might need the hybrid combination of robustness, monitoring, alignment and systemic safety with a scalable adversarial objective which can make models less sensitive to noisy perturbations. Hence, this research leads us to a very pivotal step in modifying current alignment procedures for LLMs to avoid harmful behaviors and become more robust
 
