corrected blog post grammar

--- a/_posts/2023-08-06-blog-post-1.md
+++ b/_posts/2023-08-06-blog-post-1.md
@@ -15,6 +15,8 @@ tags:
 ---
 
 
+
+
 ------
 Since the public release of LLM-based chat assistants like ChatGPT, there has been a large emphasis on aligning AI language models to prevent the production of undesirable or harmful content. One approach is to use reinforcement learning from human preferences to optimize a pre-trained language model by learning a reward function based on human preferences [[1]](https://arxiv.org/abs/2203.02155). Constitutional AI [[2]](https://arxiv.org/abs/2212.08073) further removes the need for "human" preferences by training a reward model from AI feedback refined using safety instructions. The recently released Llama-2 model [[3]](https://arxiv.org/abs/2307.09288) also uses safety and helpfulness criteria to learn an RLHF-like model that improves alignment in open-source LLMs.
 
@@ -37,15 +39,18 @@ This paper aims to attack aligned language models (LMs) using a simple prompt st
 * To make this prompt truly universal, multiple user prompts were trained across models so that the adversarial suffix can learn to induce potentially harmful behaviors across models
 
 Let’s dive into the details of how such adversarial prompts are generated which are universal and transferable
-## Producing affirmative responses
+## Adversarial prompt structure
 When the user enters a query, the chat system transforms it behind the scenes into the following format.
 ![format](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.20.06 PM.png)
 
 The adversarial suffix (shown in red) is optimized using a greedy coordinate gradient search. Importantly, the original user query is not altered, only the suffix. This allows developing a universal trigger that can mitigate potentially harmful responses across diverse user queries and models. By keeping the user query unchanged and optimizing the suffix alone, the approach can work for multiple input questions rather than being tied to specific phrasing.
+## Producing affirmative responses
+When developing the adversarial attack, the first criterion is identifying the objective - what loss function to use for optimizing the suffix. Maximizing the likelihood of a single harmful output text seemed a reasonable objective to induce harmful behavior. However, choosing one fixed target text would limit creating a universal suffix that transfers across models and encapsulates diverse unsafe responses.
+
+Instead, the approach steers the LLM into a state where it complies with the query rather than refusing it. This is done by optimizing the suffix to produce an output such as "Sure, here is a response to build a bomb." Repeating the original query in the answer is also important - otherwise, the attack may only be marginally successful as the model can override it.
 
 ## Formalizing the adversarial objective
-When developing the adversarial attack, the first criterion is identifying the objective - what loss function to use for optimizing the suffix. Maximizing the likelihood of a single harmful output text seemed a reasonable objective to induce harmful behavior. However, choosing one fixed target text would limit creating a universal suffix that transfers across models and encapsulates diverse unsafe responses.
-Instead, the approach steers the LLM into a state where it complies with the query rather than refusing it. This is done by optimizing the suffix to produce an output such as "Sure, here is a response to build a bomb." Repeating the original query in the answer is also important - otherwise, the attack may only be marginally successful as the model can override it. Therefore, given a token sequence $x_{1:n}$, we want to maximize the probability that the LLM produces the target text $x_{n+1:n+h}$. Reusing the same example, $x_{n+1:n+h}$ will be “Sure, this is a response to build a bomb” while  $x_{1:n}$ will be the system instruction, user query and the adversarial suffix. To optimize our suffix to produce the desired target text, we will need to minimize the total loss:
+ Therefore, given a token sequence $x_{1:n}$, we want to maximize the probability that the LLM produces the target text $x_{n+1:n+h}$. Reusing the same example, $x_{n+1:n+h}$ will be “Sure, this is a response to build a bomb” while  $x_{1:n}$ will be the system instruction, user query and the adversarial suffix. To optimize our suffix to produce the desired target text, we will need to minimize the total loss:
 
 $$ 
 \min \mathcal{L} (x_{1:n}) = \min - log p(x_{n+1:n+h}|x_{1:n})
