Fixed hyperlinks to cited papers

--- a/_posts/2023-08-06-blog-post-1.md
+++ b/_posts/2023-08-06-blog-post-1.md
@@ -21,14 +21,13 @@ tags:
 Since the public release of LLM-based chat assistants like ChatGPT, there has been a large emphasis on aligning AI language models to prevent the production of undesirable or harmful content. One approach is to use reinforcement learning from human preferences to optimize a pre-trained language model by learning a reward function based on human preferences [[1]](https://arxiv.org/abs/2203.02155). Constitutional AI [[2]](https://arxiv.org/abs/2212.08073) further removes the need for "human" preferences by training a reward model from AI feedback refined using safety instructions. The recently released Llama-2 model [[3]](https://arxiv.org/abs/2307.09288) also uses safety and helpfulness criteria to learn an RLHF-like model that improves alignment in open-source LLMs.
 
 To test the alignment of these models, many attempts have been made to attack them. Jailbreaking research [[4]](Alexander Wei, Nika Haghtalab, and Jacob Steinhardt. Jailbroken: How does llm safety training
-fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentional harmful queries. Currently, the loss function or reward model does not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
+fail? arXiv preprint arXiv:2307.02483, 2023) in this domain is very specific and relies on ingenious prompt engineering, making it brittle in practice. AutoPrompt[[5]](https://arxiv.org/abs/2010.15980) has also shown little success in generating successful prompts to attack LLMs. However, this does not mean that LLMs are completely robust to all types of attacks. Reward models only learn about preferences regarding "naturally out-of-distribution" or intentional harmful queries. Currently, the loss function or reward model does not take into consideration synthetic or adversarial prompts that could cause models to produce catastrophically dangerous outputs.
 
 ![Universal_attacks](https://AakankshaSanctis.github.io/images/universal_adversarial_attacks_LLMs/Screenshot 2023-08-06 at 6.17.42 PM.png)
 
 
 Universal and Transferable Adversarial Attacks
-on Aligned Language Models [[5]](Universal and Transferable Adversarial Attacks
-on Aligned Language Models) introduces a universal strategy for generating adversarial prompts, which can be applied to most LLMs, such as GPT-4, ChatGPT, Claude, and Llama2. The strategy involves attaching a suffix generated using a combination of greedy and gradient-based search techniques. The use of adversarial prompts with public chat assistants can generate creative ideas, but it can also lead to severe consequences if the wrong people get hold of the information. Therefore, this research is crucial in helping us train more resilient chatbots to prevent the dissemination of such information.
+on Aligned Language Models [[6]](https://arxiv.org/abs/2307.15043) introduces a universal strategy for generating adversarial prompts, which can be applied to most LLMs, such as GPT-4, ChatGPT, Claude, and Llama2. The strategy involves attaching a suffix generated using a combination of greedy and gradient-based search techniques. The use of adversarial prompts with public chat assistants can generate creative ideas, but it can also lead to severe consequences if the wrong people get hold of the information. Therefore, this research is crucial in helping us train more resilient chatbots to prevent the dissemination of such information.
 
 
 A Universal Attack on LLMs
