proof reading changes for blog 2

--- a/_posts/2023-08-13-blog-post-2.md
+++ b/_posts/2023-08-13-blog-post-2.md
@@ -31,7 +31,7 @@ These methods are typically employed for small language models to generate ratio
 
 However, this method requires an explicit dataset which contains the reasoning steps and is tuned to a specific dataset, restricting generalization.
 
-## Reasoning through prompting:
+## Reasoning through prompting
 
  As language models grow larger (100 B parameters), emergent properties like reasoning have been observed[[2]](https://openreview.net/pdf?id=yzkSU5zdwD). However, it is not implicit and needs to be prompted in LLMs. Chain of thought  (CoT) [[3]](https://arxiv.org/abs/2201.11903) reasoning emulates the human thought process and prompts the intermediate reasoning steps using natural language.
 
@@ -39,13 +39,13 @@ However, this method requires an explicit dataset which contains the reasoning s
  
  The basic structure of the prompt for CoT is `<input, chain of thought, output>` instead of the standard `<input, output>` prompt used in few shot learning. Since few shot examples are used to guide the model to generate intermediate reasoning steps, it does not require a large dataset or modification of the model’s weights.
 
-### Zero shot CoT:
+### Zero shot CoT
 
 One problem with few shot CoT is that we will need an initial dataset which consists of reasoning steps for different types of reasoning tasks. Kojima [[3]](https://arxiv.org/abs/2205.11916) proposes a method to perform zero -shot CoT by using instructions like “Let’s think step by step” to prompt the model to generate the reasoning chains on its own.
 
  ![zero-CoT](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/zero-cot.png)
  
-### Reasoning through Code generation:
+### Reasoning through Code generation
 Some LLMs trained on code like Codex [[4]](https://arxiv.org/abs/2210.07128) [[5]](https://arxiv.org/abs/2211.12588) are able to achieve better performance on reasoning tasks using CoT by framing reasoning as a code generation problem.
 
  ![code-CoT](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/code-cot.png)
