Added changes for self-alignment blog

--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -22,7 +22,7 @@ However, annotating instruction following datasets is challenging. Instructions 
 
  Self-alignment presents a promising solution. Self-alignment leverages the model to refine itself by rephrasing its own inputs into optimized instructions and critiques. Li et al. [[3]](https://arxiv.org/pdf/2308.06259.pdf) proposes a novel model called Humpback which combining self-alignment with backtranslation and creates a scalable framework for instruction tuning. Backtranslation, a well-established technique in machine translation, works like a game of ping pong between languages. An English sentence can be “pinged” to French, then “ponged” back to English. This recursive process helps models strengthen translation abilities in both directions. Similarly, self-alignment uses iterative refinement of instructions to build language models capable of generalizable instruction following. Let's dive into the details
 
-[back_translation](https://AakankshaSanctis.github.io/images/self-alignment/back-translation.png)
+![back_translation](https://AakankshaSanctis.github.io/images/self-alignment/back-translation.png)
 
 Self-alignment with backtranslation
 ------
@@ -34,7 +34,7 @@ Similar to machine translation, our two languages are high quality instructions 
     - Web corpus: unlabelled data (all topics; no instructions)
         - Is cleaned (deduplication, length and noise filtering)
 
-[humpack](https://AakankshaSanctis.github.io/images/self-alignment/humpback.png)
+![humpack](https://AakankshaSanctis.github.io/images/self-alignment/humpback.png)
 
 Once we have our requirement, we follow these two steps:
 ### Self augmentation:
@@ -60,15 +60,15 @@ Observations
 
 Augmented data tends to have longer outputs but higher quality instruction tend to be closer to the length of the original seed data instructions. Augmented data increases the task diversity as compared to the seed data instructions
 
-[diversity](https://AakankshaSanctis.github.io/images/self-alignment/diversity.png)
+![diversity](https://AakankshaSanctis.github.io/images/self-alignment/diversity.png)
 
 A seed set is very important to help self-curation of high quality instructions. Starting with a pretrained model does not improve performance even with high data quantity. Increasing the number of examples in this high quality seed set will eventually increase the quality of the augmented dataset
 
-[seed](https://AakankshaSanctis.github.io/images/self-alignment/seed_effect.png)
+![seed](https://AakankshaSanctis.github.io/images/self-alignment/seed_effect.png)
 
 AlpacaEval [[4]] (https://tatsu-lab.github.io/alpaca_eval/) measures the comparison between two models using a metric called pairwise win rate using GPT-4. The win rate quantifies the number of times a model produces a satisfactory output on a task. Self-augmentation and self-curation (Humpback) outperforms non-distilled models by a large margin, while it performs similarly to distilled or proprietary. With human evaluation, annotators mostly prefer Humpback generations
 
-[quality](https://AakankshaSanctis.github.io/images/self-alignment/generation_quality.png)
+![quality](https://AakankshaSanctis.github.io/images/self-alignment/generation_quality.png)
 
 
 
