fixed some bullet points

--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -28,29 +28,26 @@ Self-alignment with backtranslation
 ------
 
 Similar to machine translation, our two languages are high quality instructions (these are unknown) and unlabelled human-written web corpus. The authors also curate a small seed dataset which contains high quality instructions and its corresponding text, so that it can guide the self-alignment. To begin this process of self alignment, all we need are the following:
-    - Base language model (like Llama 7b, 33b, 65b)
-    - Small seed data (instructions, output)
-        - Can be used to give output given instruction or instruction given output
-    - Web corpus: unlabelled data (all topics; no instructions)
-        - Is cleaned (deduplication, length and noise filtering)
+- Base language model (like Llama 7b, 33b, 65b)
+- Small seed data (instructions, output)
+    - Can be used to give output given instruction or instruction given output
+- Web corpus: unlabelled data (all topics; no instructions)
+    - Is cleaned (deduplication, length and noise filtering)
 
 ![humpack](https://AakankshaSanctis.github.io/images/self-alignment/humpback.png)
 
 Once we have our requirement, we follow these two steps:
 ### Self augmentation:
-        - Generate instructions for unlabelled data, i.e. the web corpus, to produce
+- Generate instructions for unlabelled data, i.e. the web corpus, to produce
         candidate training data of (instruction, output) pairs for instruction tuning.
-        - Create a model M: p(x|y) where x: instructions, y: output
-            - Unlabelled dataset can generate $\hat{x}$ using M : A {(\hatx, y)} : augmented dataset
+- Create a model $M: p(x|y)$ where $x$: instructions, $y$: output
+- Unlabelled dataset can generate $\hat{x}$ using $M : A {(\hat{x}, y)}$, the augmented dataset
 ### Self curation:
-        - Self-select high quality demonstration examples as training data to finetune
+- Self-select high quality demonstration examples as training data to finetune
         the base model to follow instructions
-        - Start with a instruction tuned model Mo, following seed instruction set.
-        - Predict a quality score ai (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
-        - These filtered examples are used to iteratively tune model Mi with $A_k^(i-1)$ augmented set
-        - Create a model M: p(x|y) where x: instructions, y: output
-            - Unlabelled dataset can generate instructions $\hat{x}$ using M. A {(\hatx, y)} becomes the  augmented dataset
-
+- Start with a instruction tuned model Mo, following seed instruction set.
+- Predict a quality score ai (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
+- These filtered examples are used to iteratively tune model Mi with $A_k^(i-1)$ augmented set
 
 These two steps are iteratively run till we get the desired outputs like backtranslation. To differentiate between the seed instructions and the augmented instructions, prefix prompts are added.
 
@@ -66,7 +63,7 @@ A seed set is very important to help self-curation of high quality instructions.
 
 ![seed](https://AakankshaSanctis.github.io/images/self-alignment/seed_effect.png)
 
-AlpacaEval [[4]] (https://tatsu-lab.github.io/alpaca_eval/) measures the comparison between two models using a metric called pairwise win rate using GPT-4. The win rate quantifies the number of times a model produces a satisfactory output on a task. Self-augmentation and self-curation (Humpback) outperforms non-distilled models by a large margin, while it performs similarly to distilled or proprietary. With human evaluation, annotators mostly prefer Humpback generations
+AlpacaEval [[4]](https://tatsu-lab.github.io/alpaca_eval/) measures the comparison between two models using a metric called pairwise win rate using GPT-4. The win rate quantifies the number of times a model produces a satisfactory output on a task. Self-augmentation and self-curation (Humpback) outperforms non-distilled models by a large margin, while it performs similarly to distilled or proprietary. With human evaluation, annotators mostly prefer Humpback generations
 
 ![quality](https://AakankshaSanctis.github.io/images/self-alignment/generation_quality.png)
 
