--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -38,8 +38,7 @@ Similar to machine translation, our two languages are high quality instructions 
 
 Once we have our requirement, we follow these two steps:
 ### Self augmentation:
-- Generate instructions for unlabelled data, i.e. the web corpus, to produce
-        candidate training data of (instruction, output) pairs for instruction tuning.
+- Generate instructions for unlabelled data, i.e. the web corpus, to produce candidate training data of (instruction, output) pairs for instruction tuning.
 - Create a model $M: p(x|y)$ where $x$: instructions, $y$: output
 - Unlabelled dataset can generate $\hat{x}$ using $M : A {(\hat{x}, y)}$, the augmented dataset
 ### Self curation:
@@ -47,7 +46,7 @@ Once we have our requirement, we follow these two steps:
         the base model to follow instructions
 - Start with a instruction tuned model Mo, following seed instruction set.
 - Predict a quality score ai (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
-- These filtered examples are used to iteratively tune model Mi with $A_k^(i-1)$ augmented set
+- These filtered examples are used to iteratively tune model Mi with $A_k^{(i-1)}$ augmented set
 
 These two steps are iteratively run till we get the desired outputs like backtranslation. To differentiate between the seed instructions and the augmented instructions, prefix prompts are added.
 
