fixed bullet formatting

--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -39,8 +39,9 @@ Similar to machine translation, our two languages are high quality instructions 
 Once we have these requirements, we follow these two steps:
 ### Self augmentation:
 - Generate instructions for unlabelled data, i.e. the web corpus, to produce candidate training data of (instruction, output) pairs for instruction tuning.
+- Create a model $M: p(x|y)$ where $x# is the instruction and $y$ is the text output.
 - Create a model ${M: p(x|y)}$ where ${x}$ is the instructions, ${y}$ is the text output.
-- Unlabelled dataset can generate $\hat{x}$ using $M : A {(\hat{x}, y)}$, the augmented dataset
+- Unlabelled dataset can generate $\hat{x}$ using $M : A {(\hat{x}, y)}$, the augmented dataset.
 ### Self curation:
 - Self-select high quality demonstration examples as training data to finetune
         the base model to follow instructions
