--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -44,8 +44,8 @@ Once we have these requirements, we follow these two steps:
 ### Self curation:
 - Self-select high quality demonstration examples as training data to finetune
         the base model to follow instructions
-- Start with a instruction tuned model Mo, following seed instruction set.
-- Predict a quality score ai (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
+- Start with a instruction tuned model $M_0$, following seed instruction set.
+- Predict a quality score $a_i$ (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
 - These filtered examples are used to iteratively tune model Mi with $A_k^{(i-1)}$ augmented set
 
 These two steps are iteratively run till we get the desired outputs like backtranslation. To differentiate between the seed instructions and the augmented instructions, prefix prompts are added.
