Made some changes in content for blog 4

--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -13,12 +13,15 @@ Large language models like GPT-3 can be prompted with in-context examples or ins
 
 Language model architectures have now been successfully applied to the visual modality, such as in Vision Transformers (ViT) and CLIP models. An intriguing question is whether the idea of soft prompting for language models can also be applied in the visual domain for adaptation. The answer is yes – there are several promising ways to implement soft visual prompts. In this post, we will review different techniques for adapting vision models using soft prompting.
 
+
+
+
 Visual Prompt Learning
 ------
 
 While the same methods which we will discuss below can be applied to vision-only models, results indicate that prompting visual-language models results in better domain adaptation for downstream tasks via prompting
 
-## Zero-shot prompting
+### Zero-shot prompting
 
 CLIP (Contrastive Language-Image Pretraining)[[1]]([https://arxiv.org/abs/2103.00020](https://arxiv.org/abs/2103.00020)) combines corresponding visual and language information by aligning encoders for each modality using a contrastive loss. This brings the visual and language features closer together in the embedding space if they represent the same underlying concept. Specifically, the contrastive loss maximizes similarity between aligned vision-language pairs while minimizing similarity for mismatched pairs. This aligns the vision and language encoders to output high similarity embeddings for corresponding visual and textual inputs about the same object.
 
@@ -26,7 +29,7 @@ CLIP (Contrastive Language-Image Pretraining)[[1]]([https://arxiv.org/abs/2103.0
 
 To leverage CLIP's zero-shot capabilities for image classification, we can use a template like "This is a photo of [CLASS]" on the text side. The class name prompts are passed to the language encoder, while images are fed to the vision encoder. CLIP then predicts the class whose textual prompt embedding has the highest similarity to the image embedding. The original CLIP authors engineered about 80 prompts [[2]]([https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb](https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb)) for each class to maximize performance, demonstrating the impact of prompt engineering for zero-shot CLIP.
 
-## Prompting language side of vision-language models
+### Prompting language side of vision-language models
 
 We can use the notion of a soft prompt for vision-language models too. For models like CLIP, using the right template for the prompt affects the results considerably. Therefore, if we append tunable parameters to the language input of CLIP, we can get better domain adaptation.
 
@@ -35,7 +38,7 @@ We can use the notion of a soft prompt for vision-language models too. For model
 CoOp [[3]]([https://arxiv.org/pdf/2109.01134.pdf](https://arxiv.org/pdf/2109.01134.pdf)) precisely uses this concept where it uses a tunable prompt ($t_i$) to the language encoder ($g$) to maximize the probability of the target class given the tunable prompt. The image encoder ($f$) is kept frozen in this process. The resultant optimization is:
 
 $$ 
-\max p(y = i\|x) = \frac{exp(cos(g(t_i), f)/ \tau)} {\sum_{j=1}^{K} exp(cos(g(t_i), f)/\tau)}
+\max  p({y = i}\|x) = \frac{exp(cos(g(t_i), f)/ \tau)} {\sum_{j=1}^{K} exp(cos(g(t_j), f)/\tau)}
 $$ 
 
 
@@ -51,7 +54,7 @@ $$
 
 ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%204.png)
 
-## Prompting visual side of vision-language models
+### Prompting visual side of vision-language models
 
 Elsayed [[5]]([https://arxiv.org/pdf/1806.11146.pdf](https://arxiv.org/pdf/1806.11146.pdf)) first introduced the concept of adversarial reprogramming to reprogram the target model to perform a task chosen by the attacker. This was executed by tuning a learnable window around the input image, the weights of this window were updated according to the target classes of the attacker’s choice.
 
@@ -61,17 +64,17 @@ The same method can be used to adapt a pretrained image classifier or a vision-l
 
 ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%206.png)
 
-Therefore, given a pretrained model F and a downstream dataset $\mathcal{D} = {(x_1, y_1), (x_2, y_2) … (x_m, y_m)}$, the objective is to learn a visual prompt $v_{\theta}$ such that:
+Therefore, given a pretrained model F and a downstream dataset $\mathcal{D} = \{(x_1, y_1), (x_2, y_2) … (x_m, y_m)\}$, the objective is to learn a visual prompt $v_{\theta}$ such that:
 
 $$
-\max_{\theta} P(y\|x + v_{\theta})
+\max_{\theta} P(y\|{x + v_{\theta}})
 $$
 
 You can also increase the granularity of the soft prompt, and add multiple visual prompts in the embedding space of the image encoder as well [[7]]([https://arxiv.org/pdf/2203.12119.pdf](https://arxiv.org/pdf/2203.12119.pdf)). Depending on how many prompts you apply, the networks can be shallow or deep
 
 ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%207.png)
 
-## Prompting both sides of vision-language models
+### Prompting both sides of vision-language models
 
 Unimodal prompt tuning methods don’t perform consistently well, which maybe be due to some misalignment in prompts when modalities are learned independently. Unified prompt Tuning (UPT) [[8]]([https://arxiv.org/pdf/2210.07225.pdf](https://arxiv.org/pdf/2210.07225.pdf)) introduces both text and visual prompts to the model and jointly optimizes both modalities simultaneously.
 
@@ -81,7 +84,7 @@ UPT starts with an initial prompt and uses a lightweight self-attention network 
 
 ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%209.png)
 
-## In-context-learning for vision models
+### In-context-learning for vision models
 
 Language models can learn new tasks through few-shot learning, where the prompt contains a few example exemplars. Inspired by the same concept,[[9]]([https://arxiv.org/pdf/2209.00647.pdf](https://arxiv.org/pdf/2209.00647.pdf)) introduces a new type of visual prompting, where in given an example of a new task and new image, the model produces the desired output image via inpainting. For ex, if the examples consist of images which demonstrate a masking task, the pretrained model can adapt to create a mask for a new image at test time.
 
@@ -90,6 +93,8 @@ Language models can learn new tasks through few-shot learning, where the prompt 
 Each task is defined by constructing a grid like image that contains an input-output example and a novel query. This grid is the visual prompt. The model used for this task is an inpainting model which is a combination of MAE and VQ-GAN. During training, an input image is patchified, masked and fed into a MAE. For each masked toke, the decoder outputs a distribution over a pretrained VQGAN cookbook. The model is trained using cross entropy loss on random crops from our datasets
 
 ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2011.png)
+
+
 
 Some interesting applications
 ------
