Made some changes in content for blog 4

--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -139,7 +139,7 @@ This family of vision-language models [[10]]([https://arxiv.org/pdf/2204.14198.p
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2012.png) -->
 <p align="center">
-<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2012.png"width="70%" height="70%">
+<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2012.png" width="70%" height="70%">
 </p>
 
 ### Otter
@@ -148,7 +148,7 @@ Instruction tuning is used to gain better zero shot performance from language mo
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2013.png) -->
 <p align="center">
-<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2013.png"width="70%" height="70%">
+<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2013.png" width="70%" height="70%">
 </p>
 
 ### Segment Anything
@@ -157,7 +157,7 @@ Segment Anything [[12]]([https://arxiv.org/pdf/2304.02643.pdf](https://arxiv.org
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2014.png) -->
 <p align="center">
-<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2014.png" width="70%" height="70%">
+<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2014.png">
 </p>
 
 ### Visual Prompting by Landing AI
