Made some changes in content for blog 4

--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -11,7 +11,7 @@ Large language models like GPT-3 can be prompted with in-context examples or ins
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%201.png){width=50%} -->
 <p align="center">
-<img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%201.png" width="70%" height="70%">
+<img src="https://AakankshaSanctis.github.io/images/visual_prompting/prompting.png" width="70%" height="70%">
 </p>
 Language model architectures have now been successfully applied to the visual modality, such as in Vision Transformers (ViT) and CLIP models. An intriguing question is whether the idea of soft prompting for language models can also be applied in the visual domain for adaptation. The answer is yes – there are several promising ways to implement soft visual prompts. In this post, we will review different techniques for adapting vision models using soft prompting.
 
