Fixed minor mistakes

--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -87,7 +87,7 @@ $$
 \max_{\theta} P(y|{x + v_{\theta}})
 $$
 
-You can also increase the granularity of the soft prompt, and add multiple visual prompts in the embedding space of the image encoder as well [[7]](https://arxiv.org/pdf/2203.12119.pdf). Depending on how many prompts you apply, the networks can be shallow or deep
+You can also increase the granularity of the soft prompt, and add multiple visual prompts in the embedding space of the image encoder as well [[7]](https://arxiv.org/pdf/2203.12119.pdf). Depending on how many prompts you apply, the networks can be shallow or deep.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%207.png) -->
 <p align="center">
@@ -119,7 +119,7 @@ Language models can learn new tasks through few-shot learning, where the prompt 
 <img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2010.png" width="70%" height="70%">
 </p>
 
-Each task is defined by constructing a grid like image that contains an input-output example and a novel query. This grid is the visual prompt. The model used for this task is an inpainting model which is a combination of MAE and VQ-GAN. During training, an input image is patchified, masked and fed into a MAE. For each masked toke, the decoder outputs a distribution over a pretrained VQGAN cookbook. The model is trained using cross entropy loss on random crops from our datasets
+Each task is defined by constructing a grid like image that contains an input-output example and a novel query. This grid is the visual prompt. The model used for this task is an inpainting model which is a combination of MAE and VQ-GAN. During training, an input image is patchified, masked and fed into a MAE. For each masked token, the decoder outputs a distribution over a pretrained VQGAN cookbook. The model is trained using cross entropy loss on random crops from our datasets.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2011.png) -->
 <p align="center">
